# neet-performance-os

./: .gitignore  BATCH_1_Analysis_Architecture.md  BATCH_2_Modules_Dependencies.md  BATCH_3_Roadmap.md  BATCH_4_Prompts.md  BATCH_5_Testing_Decisions.md  FRONTEND_API_REFERENCE_P002.md  Frontend Architecture Specification Blueprint.md  NEET_POS_Batch6_Final.md  NEET_POS_Engineering_Blueprint.md  NEET_POS_Frontend_Dependency_Gap_Report.md  P001_IMPLEMENTATION_COMPLETE.md  P002_EXECUTIVE_SUMMARY.md  P002_JWT_LOGIN_IMPLEMENTATION.md  P002_QUICK_REFERENCE.md  QUICKSTART.md  README.md  SCAFFOLDING_COMPLETE.md  SUCCESS_CRITERIA.md  TASK_P001_REPORT.md  TEST_PLAN_P002.md  dev-setup.bat  dev-setup.sh  docker-compose.yml  how to run.txt  validate-scaffolding.py
.github/workflows/: ci.yml
MEMORY/ARCHITECTURE/: DATABASE_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
MEMORY/BACKEND/: API_ENDPOINTS.md  AUTH_FLOW.md  DATABASE_SCHEMA.md
backend/: .env.example  Dockerfile  alembic.ini  conftest.py  create_test_db.py  pyproject.toml  verify_user.py
backend/alembic/: __init__.py  env.py  script.py.mako
backend/alembic/versions/: .gitkeep  001_initial_identity.py  002_profile_extended.py  003_subjects.py
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py  models.py
backend/app/domains/content/: __init__.py  models.py
backend/app/domains/content/repositories/: __init__.py  subject_repository.py
backend/app/domains/content/routes/: __init__.py  subjects.py
backend/app/domains/content/schemas/: __init__.py  subject.py
backend/app/domains/content/services/: __init__.py  subject_service.py
backend/app/domains/identity/: DOMAIN_IDENTITY.md  __init__.py  dependencies.py  models.py  routes.py  schemas.py
backend/app/domains/identity/repositories/: __init__.py  profile_repository.py  user_repository.py
backend/app/domains/identity/services/: __init__.py  auth_service.py  jwt_service.py  profile_service.py  rbac_service.py
backend/tests/: __init__.py  test_health.py  test_identity.py  test_profile.py
backend/tests/domains/content/: test_subjects.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+31 files in other folders)
